# fantasy-sticker-album

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: auth.py  crud.py  database.py  dependencies.py  main.py  models.py  permissions.py  schemas.py  seed.py  startup.py
app/routers/: albums.py  pages.py  stickers.py
app/static/: script.js
app/static/css/: base.css  components.css  layout.css  main.css  pages.css  responsive.css  tokens.css
app/templates/: home.html  login.html
app/templates/pages/: base.html  home.html  login.html
tests/: conftest.py  test_albums_api.py  test_stickers_api.py
